# librustzcash

zcash_primitives/: Cargo.toml
zcash_primitives/src/: legacy.rs  lib.rs  prover.rs
zcash_primitives/src/transaction/: builder.rs  components.rs  sighash.rs
zcash_primitives/src/transaction/components/: amount.rs
zcash_proofs/src/: prover.rs
zcash_proofs/src/sapling/: prover.rs  verifier.rs
